--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,7 +1,7 @@
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-7 text-center text-lg-start">
-        <h1 class="display-4 fw-bold lh-1 mb-3">Welcome to Feeds, All things trending</h1>
+        <h1 class="display-4 fw-bold lh-1 mb-3 text-success">Welcome to Feeds, All things trending</h1>
         <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
@@ -19,9 +19,9 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
           </div>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign In</button>
+          <button class="w-100 btn btn-lg btn-success" type="submit">Sign In</button>
           <hr class="my-4">
-          <small class="text-muted">Our <a href="#">terms</a> of use.</small>
+          <small class="text-muted">Don't have account? <a href="#">Sign Up</a> .</small>
         </form>
       </div>
     </div>
