--- a/app/views/shared/_pubnav.html.erb
+++ b/app/views/shared/_pubnav.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <i class="bi bi-stack fs-1"></i>
+            <i class="bi bi-stack fs-1 text-success"></i>
         </a>
 
         <ul class="nav col-12 col-md-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -14,8 +14,8 @@
         </ul>
 
         <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Login</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
+            <button type="button" class="btn btn-outline-success me-2">Login</button>
+            <button type="button" class="btn btn-success">Sign-up</button>
         </div>
     </header>
 </div>
