--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -5,39 +5,118 @@
         <div class="col-md-3">
             <div class="position-sticky" style="top: 4rem;">
                 <div class="p-4 mb-3 bg-light rounded">
-                    <h5 class="fst-bold border-bottom">Trending</h5>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                    <h5 class="fst-bold border-bottom haad">Trending</h5>
+                    <div class="d-block link-dark text-decoration-none mb-2" id="" aria-expanded="false">
+                    <small class=" fw-bold "> <a class="text-decoration-none text-success" href="#">#Shidibalabala</a> </small>
+                    </div>
+                    <div class="d-block link-dark text-decoration-none mb-2" id="" aria-expanded="false">
+                    <small class=" fw-bold "> <a class="text-decoration-none text-success" href="#">#TwitterBan</a> </small>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="col-md-6">
-        <form action="">
-            <div class="mb-3">
-                <textarea class="form-control tty" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-outline-success btn-sm mb-3 ps-4 pe-4">Post</button>
-        </form>
+            <form action="">
+                <div class="mb-3">
+                    <textarea class="form-control tty" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-outline-success btn-sm mb-3 ps-4 pe-4">Post</button>
+            </form>
 
             <article class="blog-post">
-                <h2 class="blog-post-title">Sample blog post</h2>
-                <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
+                <div class="d-block link-dark text-decoration-none " id="dropdownUser2" data-bs-toggle="" aria-expanded="false">
+                    <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="32" height="32"> <small class="text-success fw-bold"> John Smith <span class="text-muted">@Johnsmith22</span></small>
+                </div>
+                <div class="msl">
+                    <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+                    <p class="d-block">
+                        <i class="bi bi-eye fs-5"></i> <small class="fss me-2">326k</small>
+                        <i class="bi bi-heart fs clk ms-4"></i> <small class="fss">12.6k</small>
+                        <i class="bi bi-chat-right-dots fs ms-4 clk"></i><small class="fss"> 12</small>
+                        <i class="bi bi-share fs ms-4 clk"></i>
+                        <i class="bi bi-bookmark-plus fs float-end me-3 clk"></i>
+                    </p>
 
-                <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+                </div>
+                <hr>
+
+                <div class="d-block link-dark text-decoration-none " id="dropdownUser2" data-bs-toggle="" aria-expanded="false">
+                    <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="32" height="32"> <small class="text-success fw-bold"> Kate Banes <span class="text-muted">@Johnsmith22</span></small>
+                </div>
+                <div class="msl">
+                    <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+                    <p class="d-block">
+                        <i class="bi bi-eye fs-5"></i> <small class="fss me-2">326k</small>
+                        <i class="bi bi-heart fs clk ms-4"></i> <small class="fss">12.6k</small>
+                        <i class="bi bi-chat-right-dots fs ms-4 clk"></i><small class="fss"> 12</small>
+                        <i class="bi bi-share fs ms-4 clk"></i>
+                        <i class="bi bi-bookmark-plus fs float-end me-3 clk"></i>
+                    </p>
+
+                </div>
                 <hr>
                 
-                
-                
-                
+                <div class="d-block link-dark text-decoration-none " id="dropdownUser2" data-bs-toggle="" aria-expanded="false">
+                    <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="32" height="32"> <small class="text-success fw-bold"> James Brand <span class="text-muted">@Johnsmith22</span></small>
+                </div>
+                <div class="msl">
+                    <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+                    <p class="d-block">
+                        <i class="bi bi-eye fs-5"></i> <small class="fss me-2">326k</small>
+                        <i class="bi bi-heart fs clk ms-4"></i> <small class="fss">12.6k</small>
+                        <i class="bi bi-chat-right-dots fs ms-4 clk"></i><small class="fss"> 12</small>
+                        <i class="bi bi-share fs ms-4 clk"></i>
+                        <i class="bi bi-bookmark-plus fs float-end me-3 clk"></i>
+                    </p>
+
+                </div>
+                <hr>
+
+                <div class="d-block link-dark text-decoration-none " id="dropdownUser2" data-bs-toggle="" aria-expanded="false">
+                    <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="32" height="32"> <small class="text-success fw-bold"> Matthew Scott <span class="text-muted">@Johnsmith22</span></small>
+                </div>
+                <div class="msl">
+                    <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+                    <p class="d-block">
+                        <i class="bi bi-eye fs-5"></i> <small class="fss me-2">326k</small>
+                        <i class="bi bi-heart fs clk ms-4"></i> <small class="fss">12.6k</small>
+                        <i class="bi bi-chat-right-dots fs ms-4 clk"></i><small class="fss"> 12</small>
+                        <i class="bi bi-share fs ms-4 clk"></i>
+                        <i class="bi bi-bookmark-plus fs float-end me-3 clk"></i>
+                    </p>
+
+                </div>
+                <hr>
+
+
+
+
             </article>
 
         </div>
 
         <div class="col-md-3">
             <div class="position-sticky" style="top: 4rem;">
-                <div class="p-4 mb-3 bg-light rounded">
-                    <h5 class="fst-bold border-bottom">Who to follow</h5>
-                    <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                <div class="p-2 mb-3 bg-light rounded">
+                    <h5 class="fst-bold border-bottom haad">Who to follow</h5>
+                    <div class="d-block link-dark text-decoration-none  mb-2" id="" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="25" height="25"> <small class=" fw-bold "> <a class="text-decoration-none text-success" href="#">John Smith</a> </small><a class="float-end text-decoration-none fw-bold lnk" title="@johnsmith22" href="#"><small>Follow</small></a>
+                    </div>
+
+                    <div class="d-block link-dark text-decoration-none mb-2" id="" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="25" height="25"> <small class=" fw-bold "> <a class="text-decoration-none text-success" href="#">Adan Grants</a> </small><a class="float-end text-decoration-none fw-bold lnk" title="@Adangrants_1" href="#"><small>Follow</small></a>
+                    </div>
+
+                    <div class="d-block link-dark text-decoration-none mb-2" id="" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="25" height="25"> <small class=" fw-bold "> <a class="text-decoration-none text-success" href="#">Fletcher Jr</a> </small><a class="float-end text-decoration-none fw-bold lnk" title="@fletchJr" href="#"><small>Follow</small></a>
+                    </div>
+
+                    <div class="d-block link-dark text-decoration-none mb-2" id="" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="25" height="25"> <small class=" fw-bold "> <a class="text-decoration-none text-success" href="#">Tom Woods</a> </small><a class="float-end text-decoration-none fw-bold lnk" title="@tom_woods" href="#"><small>Follow</small></a>
+                    </div>
+
+                    
                 </div>
             </div>
         </div>
