--- a/app/assets/stylesheets/feeds.scss
+++ b/app/assets/stylesheets/feeds.scss
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Playfair+Display&family=STIX+Two+Math&display=swap');
+
+.hhh{
+    font-family: 'Playfair Display', serif;
+}
+
+.ghh{
+    font-family: 'Crimson Text', serif;
+}
+
 .fss{
     font-size: small;
 }
