--- a/app/views/shared/_feednav.html.erb
+++ b/app/views/shared/_feednav.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-   <header class="py-3 mb-3 border-bottom">
+<div class="container position-sticky bg-light  " style="top: 0rem;">
+   <header class="py-3 mb-3 border-bottom ">
     <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
       <div class="dropdown">
         <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-dark text-decoration-none dropdown-toggle" id="dropdownNavLink" data-bs-toggle="dropdown" aria-expanded="false">
@@ -22,8 +22,8 @@
         </form>
 
         <div class="flex-shrink-0 dropdown">
-          <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="mdo" class="rounded-circle" width="32" height="32">
+          <a href="#" class="d-block link-dark text-decoration-none zindex-dropdown" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://github.com/mdo.png" alt="mdo" class="rounded-circle" width="32" height="32"> John Doe
           </a>
           <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
             <li><a class="dropdown-item" href="#">New project...</a></li>
