added javascript click and image preview functionality
Signed-off-by: alexcodeable <alexokomado@gmail.com>

--- a/app/views/shared/_pubnav.html.erb
+++ b/app/views/shared/_pubnav.html.erb
@@ -14,10 +14,10 @@
 
         <div class="col-md-3 text-end">
         </div>
-            <button onclick="document.getElementById('fform').style.display='block'" type="button" class="btn btn-outline-success btn-sm"><i class="bi bi-brush"></i> New Post</button>
+            <button  type="button" class="btn btn-outline-success btn-sm postBtn"><i class="bi bi-brush"></i> New Post</button>
         <div class="flex-shrink-0 dropdown">
-          <a href="#" class="d-block link-dark text-decoration-none zindex-dropdown" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="mdo" class="rounded-circle" width="32" height="32"> John Doe
+          <a href="#" class="d-block link-dark text-decoration-none zindex-dropdown haad" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://github.com/mdo.png" alt="mdo" class="rounded-circle" width="32" height="32"> John Smith
           </a>
           <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
             <li><a class="dropdown-item" href="#">New project...</a></li>
