--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -5,7 +5,7 @@
         <div class="col-md-3 ">
             <div class="position-sticky  " style="top: 4.9rem;">
                 <div class="p-3 mb-3 bg-light rounded">
-                    <img src="https://github.com/mdo.png" width="90" height="90" class="rounded-circle mx-auto d-block" alt="...">
+                    <img src="https://github.com/mdo.png" width="90" height="90" class="rounded-circle mx-auto d-block" alt="Profile Image">
                     <h5 class="fst-bold text-center mt-2 haad"><a href="#profile_link"><i title="Copy Profile Link" class="bi bi-link-45deg text-success me-3"></i></a>John Smith<i class="bi bi-gear-wide-connected text-success ms-3 clk"></i></h5>
                     <div class="row mt-3">
                         <div class="col text-center ghh">
@@ -50,20 +50,40 @@
         </div>
 
         <div class="col-md-6">
-        <button type="button" class="btn btn-outline-success  btn-sm mb-3 ps-4 pe-4 " onclick="document.getElementById('fform').style.display='block'"><i class="bi bi-brush"></i> New Post</button>
+            <button type="button" class="btn btn-outline-success btn-sm mb-3 ps-4 pe-4 postBtn"><i class="bi bi-brush"></i> New Post</button>
 
-            <div id="fform" style="display:none">
-                <form action="">
+            <div id="fform" class="d-none">
+                <form action="" enctype="multipart/form-data">
                     <div class="mb-3">
-                        <textarea class="form-control tty" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control tty" placeholder="What's on your mind..." id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <div class="row" id="img-preview">
+
                     </div>
                     <button type="submit" class="btn btn-outline-success btn-sm mb-3 ps-4 pe-4">Post</button>
+                    <label for="img-s" class="float-end"><i class="bi bi-image text-success fs-5 clk"></i></label>
+                    <input type="file" name="" id="img-s" style="display:none;" multiple accept="image/*">
                 </form>
             </div>
+
 
             <article class="blog-post">
                 <div class="d-block link-dark text-decoration-none " id="dropdownUser2" data-bs-toggle="" aria-expanded="false">
                     <img src="https://github.com/mdo.png" alt="img" class="rounded-circle" width="32" height="32"> <small class="text-success fw-bold"> <a class="text-decoration-none text-success" href="#">John Smith</a> <i title="Verified Profile" class="bi bi-patch-check-fill"></i> <span class="text-muted">@Johnsmith22</span></small>
+                    <span class="flex-shrink-0 dropdown float-end">
+                        <a href="#" class="d-block link-dark text-decoration-none zindex-dropdown  haad" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-three-dots-vertical "></i>
+                        </a>
+                        <ul class="dropdown-menu text-small pull-left shadow" aria-labelledby="dropdownUser2">
+                            <li><a class="dropdown-item" href="#">New project...</a></li>
+                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Sign out</a></li>
+                        </ul>
+                    </span>
                 </div>
                 <div class="msl">
                     <img src="https://images.unsplash.com/photo-1606787947360-4181fe0ab58c?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="img-fluid rounded mt-3 mb-2" alt="image">
@@ -180,3 +200,20 @@
 
 </div>
 </div>
+
+<script>
+    document.querySelectorAll(".postBtn").forEach(element => {
+        element.addEventListener("click", (event) => {
+            let textDiv = document.getElementById('fform');
+            textDiv.classList = textDiv.classList[0] == 'd-none' ? 'd-block' : 'd-none';
+        });
+    })
+    document.getElementById('img-s').addEventListener('change', (event) => {
+        files = event.currentTarget.files;
+        // if(files.length > 4) return;
+        for (var i = 0; i < files.length; i++) {
+            
+            document.getElementById('img-preview').innerHTML += `<div class='col-3'><img src="${URL.createObjectURL(files[i])}" class="img-fluid"></div>`
+        }
+    });
+</script>
