--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -23,6 +23,7 @@
           <hr class="my-4">
           <small class="text-muted">Don't have account? <a href="#">Sign Up</a> .</small>
         </form>
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
       </div>
     </div>
   </div>
