--- a/app/views/shared/_pubnav.html.erb
+++ b/app/views/shared/_pubnav.html.erb
@@ -24,7 +24,8 @@
             <li><a class="dropdown-item" href="#">Settings</a></li>
             <li><a class="dropdown-item" href="#">Profile</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Sign out</a></li>
+            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item text-danger" %></li>
+            
           </ul>
         </div>
     </header>
