--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -21,7 +21,7 @@
           </div>
           <button class="w-100 btn btn-lg btn-success" type="submit">Sign In</button>
           <hr class="my-4">
-          <small class="text-muted">Don't have account? <a href="#">Sign Up</a> .</small>
+          <small class="text-muted">Don't have account? <a href="/users/sign_up">Sign Up</a> .</small>
         </form>
       </div>
     </div>
